CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #648, STR #692, STR #730, STR
	  #744, STR #745)
	- Added "filenew", "fileopen", "filesave", "filesaveas",
	  and "fileprint" symbols with standard toolbar
	  symbology.
	- Updated Fl_Tabs to check the contrast of the label
	  color against the tab background, and to highlight the
	  top 5 lines of the tab pane with the selection color so
	  that selected tabs stand out more.
	- The example programs can now compile separate from the
	  FLTK source distribution (STR #809)
	- The example programs are now installed with the
	  documentation (STR #809)
	- Fixed the drawing of the Fl_Browser_ selection box (STR
	  #786)
	- Dropped Codewarrier project files and support.
	- The FLTK string functions are now compiled in on all
	  systems (STR #774)
	- Fixed symbol demo label bug (STR #777)
	- Fixed position of menu titles (STR #795)
	- Added missing Fl_Window::copy_label() method.
	- Fixed wrong tooltip in fluid (STR #784)
	- Added zlib path to fluid (STR #783)
	- Menus and other pop-up windows now obey screen
	  boundaries on multi-screen displays (STR #781)
	- Fl_Chart would draw outside its bounding box (STR #780)
	- Added Fl::screen_count() and Fl::screen_xywh() APIs to
	  support multi-screen displays.
	- FLUID now supports direct creation of widget classes.
	- Fl_File_Chooser now correctly handles multiple
	  selections that are a mix of files and directories.
	- Fl_File_Chooser no longer resets the type() when
	  choosing a single file, and it now works when selecting
	  multiple directories (STR #747)
	- Fl_File_Icon::load_system_icons() now only loads 16x16
	  and 32x32 icon images to improve startup performance.
	- Pressing Enter in the file chooser when selecting a
	  directory will choose that directory if it is currently
	  shown (STR #746)
	- Added a fl_file_chooser_ok_label() function to set the
	  "OK" button label for the fl_file_chooser() and
	  fl_dir_chooser() functions.